kubernetes/apps/servarr/autobrr/app/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: &app autobrr
  labels:
    app.kubernetes.io/name: *app
spec:
  selector:
    app.kubernetes.io/name: *app
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 9094
      targetPort: metrics
